modified:   src/components/Buttons/DarkThemeButton.tsx 	modified:   src/components/Card.module.css 	modified:   src/components/Card.tsx 	modified:   src/components/CreateForm/CreateFormBasicInfromation.tsx 	modified:   src/components/CreateForm/CreateFormContactDetails.tsx 	modified:   src/components/CreateForm/CreateFormDescription.tsx 	modified:   src/components/CreateForm/CreateFormDetailedInformation.tsx 	modified:   src/components/Dropdown.tsx 	modified:   src/components/Favorites.tsx 	modified:   src/components/Item/ItemInfoDescription.tsx 	modified:   src/components/Item/ItemPhotos.tsx 	modified:   src/components/Item/ItemPhotosMobileGallery.tsx 	modified:   src/components/Item/ItemSideArticle.tsx 	modified:   src/components/List/List.tsx 	modified:   src/components/List/ListItem.tsx 	modified:   src/components/List/ListItemMobile.tsx 	modified:   src/components/Navbar/Navbar.module.css 	modified:   src/components/Navbar/Navbar.tsx 	modified:   src/components/Navbar/SidebarMobile.tsx 	modified:   src/components/Navbar/UserInterface.module.css 	modified:   src/components/Navbar/UserInterface.tsx 	modified:   src/components/Navbar/UserSignUp.tsx 	modified:   src/components/NotFound.tsx 	modified:   src/components/Price.tsx 	modified:   src/components/SearchForm.tsx 	modified:   src/pages/Item.tsx 	renamed:    src/components/useActive.ts -> src/utils/useActive.ts 	renamed:    src/components/useAddToFavorites.tsx -> src/utils/useAddToFavorites.tsx 	new file:   src/utils/useThrottle.tsx

--- a/src/components/Navbar/UserInterface.module.css
+++ b/src/components/Navbar/UserInterface.module.css
@@ -199,6 +199,7 @@
   color: var(--primary-text-color);
   text-align: center;
   user-select: none;
+  cursor: pointer;
 }
 .submit:disabled {
   background-color: var(--disabled);
@@ -243,6 +244,7 @@
   padding: 10px 0;
   color: var(--primary-text-color);
   transition: all 0.3s ease 0s;
+  
 }
 
 .signup:hover {
