modified:   src/components/Card.module.css 	modified:   src/components/CreateForm/CreateFormContactDetails.module.css 	modified:   src/components/List/ListItem.tsx 	modified:   src/components/Navbar/Navbar.module.css 	modified:   src/components/Navbar/UserInterface.module.css 	modified:   src/styles/LandingPage.module.css

--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -158,3 +158,8 @@
     background-color: rgba(0, 0, 0, 0);
   }
 }
+
+@media (min-width: 800px) and (max-width: 1510px) {
+  .section_searchbar{}
+  
+}
