--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -51,3 +51,19 @@
     width: 300px;
   }
 }
+@media (max-width: 1380px) {
+  .card_section_item {
+    width: 300px;
+  }
+}
+@media (max-width: 1100px) {
+  .card_section_item {
+    width: 250px;
+  }
+}
+
+@media (max-width: 980px) {
+  .card_section_item {
+    width: 220px;
+  }
+}
