--- a/src/components/CreateForm/CreateFormContactDetails.module.css
+++ b/src/components/CreateForm/CreateFormContactDetails.module.css
@@ -238,3 +238,72 @@
     top: 10px;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1600px) {
+  .descriptionTitle {
+    width: 380px;
+  }
+  .descriptionText {
+    width: 380px;
+  }
+  .digitsStyle {
+    justify-content: center;
+  }
+
+  .article > h3 {
+    text-align: center;
+  }
+
+  .article:nth-last-child(3) > header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+  .moreInfoOpened {
+    font-size: 12px;
+    position: inherit;
+    transform: none;
+    text-align: center;
+    user-select: none;
+    transition: opacity 0.5s;
+    opacity: 1;
+    margin-top: 10px;
+  }
+  .moreInfoClosed {
+    font-size: 12px;
+    position: inherit;
+    transform: none;
+    margin-top: 10px;
+    text-align: center;
+    user-select: none;
+    transition: opacity 0.5s;
+    opacity: 0;
+  }
+  .moreInfoArrowOpened {
+    position: absolute;
+    right: 0px;
+    top: -5px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.5s ease-in-out;
+    transform: rotate(0deg);
+    cursor: pointer;
+  }
+  .moreInfoArrowClosed {
+    position: absolute;
+    right: 0px;
+    top: -5px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.5s ease-in-out;
+    transform: rotate(180deg);
+    cursor: pointer;
+  }
+}
