--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -110,12 +110,14 @@
 
 .nav__links {
   list-style: none;
+  display: flex;
 }
 
 .nav__links li {
   height: 2.15rem;
   vertical-align: middle;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   padding: 10px 32px;
   margin: 0 5px;
   border-radius: 5px;
@@ -167,3 +169,30 @@
   }
 }
 
+@media (max-width: 1600px) {
+  .nav {
+    padding: 10px;
+  }
+
+  .nav__links li {
+  height: 2.15rem;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  padding: 10px 28px;
+  margin: 0 5px;
+  border-radius: 5px;
+  background-color: var(--secondary-color);
+  transition: all 0.3s ease 0s;
+}
+}
+@media (max-width: 1280px) {
+.nav__links li{
+    padding: 10px 18px;
+}
+}
+@media (max-width: 1000px) {
+.nav__links li{
+    padding: 10px 12px;
+}
+}
