--- a/src/components/Navbar/UserInterface.module.css
+++ b/src/components/Navbar/UserInterface.module.css
@@ -244,7 +244,6 @@
   padding: 10px 0;
   color: var(--primary-text-color);
   transition: all 0.3s ease 0s;
-  
 }
 
 .signup:hover {
@@ -302,4 +301,26 @@
 .notLoggedIn_cointainer:hover * {
   color: var(--tertiary-text-color);
   transition: all 0.3s ease-in-out 0s;
+}
+
+@media (max-width: 1600px) {
+  .btn__group {
+    display: inline-block;
+    position: relative;
+    width: 250px;
+  }
+}
+@media (max-width: 1280px) {
+  .btn__group {
+    display: inline-block;
+    position: relative;
+    width: 200px;
+  }
+}
+@media (max-width: 1000px) {
+  .btn__group {
+    display: inline-block;
+    position: relative;
+    width: 180px;
+  }
 }
