modified:   src/components/Buttons/Button.css 	modified:   src/components/CreateForm/CreateForm.module.css 	modified:   src/components/FullscreenPhotosGallery.module.css 	modified:   src/components/Item/ItemPhotos.module.css 	modified:   src/components/Item/ItemSideArticle.module.css 	modified:   src/components/Item/ItemSideArticleCredit.module.css 	modified:   src/components/List/Pagination.module.css 	modified:   src/components/List/PaginationMobile.module.css 	deleted:    src/components/Navbar.module.css 	modified:   src/components/Navbar/Navbar.tsx 	modified:   src/components/Navbar/UserInterface.module.css 	modified:   src/components/Navbar/UserSignUp.module.css 	modified:   src/components/Price.tsx 	modified:   src/components/SearchForm.module.css 	modified:   src/components/SearchForm.tsx 	modified:   src/components/SignUp.module.css

--- a/src/components/FullscreenPhotosGallery.module.css
+++ b/src/components/FullscreenPhotosGallery.module.css
@@ -88,6 +88,7 @@
 }
 .bigPhoto_arrowPrev:disabled,
 .bigPhoto_arrowNext:disabled {
+  cursor: not-allowed;
   background-color: var(--disabled);
   border: 2px solid var(--secondary-text-color);
 }
