--- a/src/components/List/Pagination.module.css
+++ b/src/components/List/Pagination.module.css
@@ -45,6 +45,7 @@
 }
 
 .pagination__list_btn:disabled {
+  cursor: not-allowed;
   background-color: var(--disabled);
   border: 2px solid black;
 }
