--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -24,6 +24,7 @@
 }
 
 .small-button:disabled {
+  cursor: not-allowed;
   background-color: var(--disabled);
   border: 2px solid var(--secondary-text-color);
 }
