--- a/src/components/Analitics/Analitics.module.css
+++ b/src/components/Analitics/Analitics.module.css
@@ -6,11 +6,13 @@
 }
 
 .pie {
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
+  background-color: var(--text-background);
 }
 
 .bar {
-  width: 400px;
+  width: 800px;
   height: 400px;
+  background-color: var(--text-background);
 }
