--- a/src/components/Analitics/Analitics.module.css
+++ b/src/components/Analitics/Analitics.module.css
@@ -3,17 +3,94 @@
   margin-top: 100px;
   background-color: blanchedalmond;
   width: 100%;
-  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  margin: 20px 0;
+}
+.header > h2 {
+  user-select: none;
+}
+
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--article);
+  flex-direction: column;
+  padding: 0 10px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  height: 488px;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.section:first-child {
+  margin: 20px 0 10px 0;
+}
+
+.section {
+  margin: 10px 0;
+}
+.section > h2 {
+  margin: 10px 0;
+  user-select: none;
+}
+
+.section:last-child {
+  margin: 10px 0 20px 0;
 }
 
 .pie {
+  padding: 20px;
   width: 400px;
   height: 400px;
   background-color: var(--text-background);
+  border-radius: 5px;
 }
 
 .bar {
+  padding: 20px;
   width: 800px;
   height: 400px;
   background-color: var(--text-background);
+  border-radius: 5px;
+}
+
+.bar_chart {
+  padding: 20px;
+  width: 800px;
+  height: 400px;
+  background-color: var(--text-background);
+  border-radius: 5px;
+  grid-row: 1/3;
+}
+.bar_dropdown > label {
+  color: var(--primary-text-color);
+}
+
+.bar_dropdown {
+  text-align: center;
+  width: 200px;
+  background-color: var(--secondary-color);
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 10px;
+  border-radius: 5px;
+}
+.grid_container {
+  width: 1000px;
+  display: grid;
+  grid-template-columns: 800px 200px;
+  grid-template-rows: 50% 50%;
+  background-color: var(--text-background);
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  
 }
