--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -175,24 +175,28 @@
   }
 
   .nav__links li {
-  height: 2.15rem;
-  vertical-align: middle;
-  display: flex;
-  align-items: center;
-  padding: 10px 28px;
-  margin: 0 5px;
-  border-radius: 5px;
-  background-color: var(--secondary-color);
-  transition: all 0.3s ease 0s;
-}
+    height: 2.15rem;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+    padding: 10px 28px;
+    margin: 0 5px;
+    border-radius: 5px;
+    background-color: var(--secondary-color);
+    transition: all 0.3s ease 0s;
+  }
 }
 @media (max-width: 1280px) {
-.nav__links li{
+  .nav__links li {
     padding: 10px 18px;
-}
+  }
 }
 @media (max-width: 1000px) {
-.nav__links li{
+  .nav__links li {
     padding: 10px 12px;
+  }
 }
-}
+/*border-left: 1px solid rgba(216,216,216,.4)!important;
+    border-right: 1px
+px
+ solid rgba(216,216,216,.4)!important;*/
