--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -29,3 +29,58 @@
 .list__container > li:last-child {
   margin: 10px 0 20px 0;
 }
+
+.section__options_mobile_closed {
+  width: 100%;
+  height: 50px;
+  transition: all 0.3s ease-in-out 0s;
+  background-color: var(--secondary-color);
+}
+
+.section__options_mobile_opened {
+  width: 100%;
+  height: 300px;
+  transition: all 0.3s ease-in-out 0s;
+  background-color: var(--secondary-color);
+}
+
+.small_button {
+  border: none;
+  border-radius: 5px;
+  background-color: var(--tertiary-color);
+  color: var(--primary-text-color);
+  transition: all 0.3s ease 0s;
+  width: 100px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.small_button:hover {
+  color: var(--tertiary-text-color);
+  background-color: var(--tertiary-color);
+}
+.small_button:active {
+  background-color: #051034;
+  transform: scale(0.8, 0.8);
+  transition: 0.15s;
+  box-shadow: 0 0 2px 6px var(--tertiary-text-color);
+}
+
+.small_button:disabled {
+  cursor: not-allowed;
+  background-color: var(--disabled);
+  border: 2px solid var(--secondary-text-color);
+}
+
+.small_button_ArrowOpened {
+  transition: transform 0.5s ease-in-out;
+  transform: rotate(0deg);
+}
+
+.small_button_ArrowClosed {
+  transition: transform 0.5s ease-in-out;
+  transform: rotate(180deg);
+}
