modified:   package-lock.json 	modified:   package.json 	deleted:    src/App.css 	modified:   src/App.tsx 	new file:   src/GoogleMaps/GoogleMaps.tsx 	deleted:    src/Leaflet/Leaflet.css 	deleted:    src/Leaflet/Leaflet.tsx 	modified:   src/components/CreateForm/CreateFormLocation.tsx 	modified:   src/components/Item/ItemInfoDescription.module.css 	modified:   src/components/List/ListItem.module.css 	modified:   src/components/List/ListItem.tsx 	modified:   src/components/List/ListItemMobile.module.css 	modified:   src/components/Navbar/Navbar.module.css 	modified:   src/components/SearchForm.module.css 	modified:   src/pages/Item.tsx

--- a/src/components/Item/ItemInfoDescription.module.css
+++ b/src/components/Item/ItemInfoDescription.module.css
@@ -5,6 +5,7 @@
 
 .description_container > h2 {
   padding: 20px 0;
+  border-bottom: 2px solid rgba(216, 216, 216, 0.4);
 }
 
 .description_container_maps {
