--- a/src/components/List/ListItem.module.css
+++ b/src/components/List/ListItem.module.css
@@ -51,6 +51,7 @@ a {
   grid-column-end: span 4;
   display: flex;
   align-items: center;
+  border-bottom: 1px solid rgba(216, 216, 216, 0.4);
 }
 
 .grid_mini_category {
