--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -138,7 +138,7 @@
 .small_button {
   border: none;
   border-radius: 5px;
-  background-color: var(--tertiary-color);
+  background-color: var(--secondary-color);
   color: var(--primary-text-color);
   transition: all 0.3s ease 0s;
   width: 100px;
