modified:   src/components/Footer.module.css 	modified:   src/components/Footer.tsx 	renamed:    src/components/FullscreenPhotosGallery.module.css -> src/components/Item/ItemFullscreenPhotosGallery.module.css 	renamed:    src/components/FullscreenPhotosGallery.tsx -> src/components/Item/ItemFullscreenPhotosGallery.tsx 	modified:   src/components/Item/ItemInfoDescription.module.css 	modified:   src/components/Item/ItemInfoDescription.tsx 	modified:   src/components/Item/ItemPhotos.module.css 	modified:   src/components/Item/ItemPhotos.tsx 	modified:   src/components/Item/ItemPhotosMobileGallery.tsx 	modified:   src/components/Navbar/Navbar.module.css 	modified:   src/components/Navbar/UserInterface.module.css 	modified:   src/components/SearchForm.module.css 	modified:   src/utils/useThrottle.tsx

--- a/src/components/Navbar/UserInterface.module.css
+++ b/src/components/Navbar/UserInterface.module.css
@@ -104,6 +104,7 @@
 .menu_list > a > .menu_list_item {
   color: white;
   text-decoration: none;
+  border-bottom: 1px solid rgba(216, 216, 216, 0.4);
 }
 
 .menu_list > a > .menu_list_item:hover {
