--- a/src/components/Item/ItemFullscreenPhotosGallery.module.css
+++ b/src/components/Item/ItemFullscreenPhotosGallery.module.css
@@ -93,7 +93,6 @@
   border: 2px solid var(--secondary-text-color);
 }
 
-
 .ornament_prev {
   position: absolute;
   left: 0;
@@ -136,22 +135,22 @@
   transition: all 0.3s ease 0s;
   display: block;
   margin: auto;
-    width: 2em;
+  width: 2em;
   height: 2em;
 }
 
 .buttonExit:hover {
- box-shadow: 5px 5px  var(--tertiary-text-color);
+  box-shadow: 5px 5px var(--tertiary-text-color);
   transition: all 0.3s ease 0s;
 }
 
-.buttonExit>svg:hover{
-  color:var(--tertiary-text-color);
+.buttonExit > svg:hover {
+  color: var(--tertiary-text-color);
 }
 
-.buttonExit:active{
+.buttonExit:active {
   background-color: var(--quaternary-color);
-    transform: scale(0.8, 0.8);
+  transform: scale(0.8, 0.8);
   transition: 0.05s;
 }
 
@@ -162,4 +161,5 @@
   font-size: 40px;
   vertical-align: middle;
   user-select: none;
+  display: flex;
 }
