--- a/src/components/Item/ItemPhotos.module.css
+++ b/src/components/Item/ItemPhotos.module.css
@@ -281,23 +281,47 @@
     border-radius: 5px;
   }
 
-
   .mobile_grid_gallery_item:nth-child(3n + 1) {
     grid-area: span 1 / span 2;
   }
 }
-
-.infinite_gallery{
-  background-color: brown;
-  width: 100%;
-  height: 100%;
-}
-.infinite_gallery_item{
-  width: 250px;
-  height: 250px;
-  background-color: aqua;
+.infinite_gallery_item {
+  box-shadow: 0px 0px 31px -12px rgba(66, 68, 90, 0.47);
 }
 
-.infinite_gallery_item_photo{
-display: none;
+.infinite_gallery {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  white-space: nowrap;
+  align-items: center;
+  scroll-snap-type: x mandatory;
+  height: calc(100% - 100px);
+  background-color: var(--primary-color);
+  padding: 10px 0;
+  position: relative;
+  list-style: none;
+}
+
+.mobile_gallery_image_infinite {
+  height: 50vh;
+  object-fit: cover;
+  margin: 0 20px 0 20px;
+  scroll-snap-align: center;
+  background-color: aquamarine;
+}
+@media (orientation: landscape) {
+  .mobile_gallery_image_infinite {
+    height: 80vh;
+    object-fit: contain;
+    margin: 0 100vw;
+    scroll-snap-align: center;
+    background-color: aquamarine;
+    max-height: 100%;
+  }
+  .infinite_gallery_item {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 0px 31px -12px rgba(66, 68, 90, 0.47);
+  }
 }
