--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -204,11 +204,31 @@
     display: flex;
     align-items: center;
     padding: 10px 28px;
-    margin: 0 5px;
-    border-radius: 5px;
     background-color: var(--secondary-color);
     transition: all 0.3s ease 0s;
   }
+  .nav__links li {
+  color: white;
+  text-decoration: none;
+}
+
+.nav__links li:hover {
+  background-color: var(--tertiary-color);
+}
+
+.nav__links li:hover {
+  color: var(--tertiary-text-color);
+}
+.nav__link:first-child > li {
+  border-radius: 5px 0px 0px 5px;
+}
+.nav__link:last-child > li {
+  border-radius: 0px 5px 5px 0px;
+}
+.nav__link:not(:first-child):not(:last-child) > li {
+  border-left: 1px solid rgba(216, 216, 216, 0.4);
+  border-right: 1px solid rgba(216, 216, 216, 0.4);
+}
 }
 @media (max-width: 1280px) {
   .nav__links li {
