--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -11,7 +11,7 @@
 
 .section {
   display: grid;
-  background-color: var(--tertiary-color);
+  background-color: var(--primary-color);
   width: 100%;
   height: 100%;
   grid-template-columns: repeat(5, 1fr) repeat(2, 100px);
