--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -39,6 +39,7 @@
 .title {
   color: var(--primary-text-color);
   text-align: center;
+  border-bottom: 1px solid rgba(216, 216, 216, 0.4);
 }
 
 .social_links {
@@ -136,7 +137,8 @@
   .social {
     width: auto;
   }
-  .container_navigation,.container_options{
+  .container_navigation,
+  .container_options {
     width: 300px;
   }
 }
