--- a/src/components/Loading.module.css
+++ b/src/components/Loading.module.css
@@ -28,3 +28,19 @@
     transform: rotate(360deg);
   }
 }
+
+.loading_container span {
+  position: relative;
+  display: inline-block;
+  animation: waviy 1s infinite;
+}
+@keyframes waviy {
+  0%,
+  40%,
+  100% {
+    transform: translateY(0);
+  }
+  20% {
+    transform: translateY(-20px);
+  }
+}
