--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: #8ac6d0;
   z-index: 0;
-  padding: 20px;
+  padding: 20px 0;
   display: flex;
   align-items: center;
 }
@@ -14,7 +14,7 @@
   background-color: var(--primary-color);
   width: 100%;
   height: 100%;
-  grid-template-columns: repeat(5, 1fr) repeat(2, 100px);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 160px;
   align-items: center;
   justify-items: center;
@@ -23,14 +23,15 @@
 .sectionOpened {
   height: 200px;
   width: 100%;
-  background-color: var(--tertiary-color);
+  background-color: var(--primary-color);
   display: block;
   grid-column-start: span 8;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   align-items: center;
   justify-items: center;
   box-shadow: var(--box-shadow-dropdown);
+  border-top: 1px solid rgba(216, 216, 216, 0.4);
 }
 
 .dropdown {
@@ -69,10 +70,12 @@
   color: white;
   padding: 5px 10px;
 }
-
-.submitButton {
-  grid-column-start: 7;
+.section_submit{
+  grid-column-start: 5;
+  grid-row: 1;
+  display: flex;
 }
+
 
 .form_input_container {
   height: 80px;
@@ -127,6 +130,23 @@
   top: 50%;
   left: 6px;
   transform: translateY(-50%);
+}
+
+.sectionOpened > div:nth-child(1) {
+  grid-row: 2;
+  grid-column: 1/2;
+}
+.sectionOpened > div:nth-child(2) {
+  grid-row: 2;
+  grid-column: 2/3;
+}
+.sectionOpened > div:nth-child(3) {
+  grid-row: 2;
+  grid-column: 3/4;
+}
+.sectionOpened > div:nth-child(4) {
+  grid-row: 2;
+  grid-column: 4/5;
 }
 
 @media (max-width: 800px) {
