modified:   src/components/Card.module.css 	modified:   src/components/Card.tsx 	modified:   src/components/Footer.module.css 	modified:   src/components/SearchForm.module.css 	modified:   src/components/SearchForm.tsx 	modified:   src/pages/LandingPage.tsx 	modified:   src/styles/LandingPage.module.css

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -88,6 +88,11 @@
 
 .options_li {
   list-style: none;
+  cursor: pointer;
+  transition: transform 0.2s ease-out;
+}
+.options_li:active {
+  transform: scale(0.95 );
 }
 
 .article {
