--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -32,9 +32,13 @@
 
 .section__options_mobile_closed {
   width: 100%;
-  height: 50px;
+  height: 60px;
   transition: all 0.3s ease-in-out 0s;
   background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .section__options_mobile_opened {
@@ -42,6 +46,21 @@
   height: 300px;
   transition: all 0.3s ease-in-out 0s;
   background-color: var(--secondary-color);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+.section__options_mobile_opened > aside {
+  grid-row: 2/5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+  width: 75%;
+  text-align: center;
 }
 
 .small_button {
@@ -50,7 +69,7 @@
   background-color: var(--tertiary-color);
   color: var(--primary-text-color);
   transition: all 0.3s ease 0s;
-  width: 100px;
+  width: 75%;
   height: 40px;
   cursor: pointer;
   display: flex;
