--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -1,10 +1,11 @@
 .search_form {
-  margin-top: 100px;
+  margin-top: 125px;
+  margin-bottom: 25px;
+
   height: 200px;
   width: 100%;
   background-color: var(--text-background);
   z-index: 0;
-  padding: 20px 0;
   display: flex;
   align-items: center;
 }
@@ -13,25 +14,15 @@
   display: grid;
   background-color: var(--primary-color);
   width: 100%;
-  height: 100%;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 160px;
+  height: 200px;
+  grid-template-columns: repeat(4, 1fr) 120px;
+  grid-template-rows: repeat(2, 100px);
   align-items: center;
   justify-items: center;
   position: relative;
-}
-.sectionOpened {
-  height: 200px;
-  width: 100%;
-  background-color: var(--primary-color);
-  display: block;
-  grid-column-start: span 8;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  align-items: center;
-  justify-items: center;
-  box-shadow: var(--box-shadow-dropdown);
-  border-top: 1px solid rgba(216, 216, 216, 0.4);
+  padding: 0 40px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .dropdown {
@@ -72,10 +63,12 @@
 }
 .section_submit {
   grid-column-start: 5;
-  grid-row: 1;
+  grid-row: 1/3;
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid rgba(216, 216, 216, 0.4);
+  align-items: center;
+  justify-content: center;
 }
 .section_submit > h5 {
   text-align: center;
@@ -206,4 +199,108 @@
 .small_button_ArrowClosed {
   transition: transform 0.5s ease-in-out;
   transform: rotate(180deg);
+}
+/*1400*/
+
+@media (max-width: 1400px) {
+  .search_form {
+    margin-top: 200px;
+    margin-bottom: 100px;
+  }
+  .section {
+    height: 350px;
+    grid-template-rows: repeat(3, 100px);
+  }
+
+  .section > div:nth-child(1) {
+    grid-column: 1/2;
+  }
+  .section > div:nth-child(2) {
+    grid-column: 2/3;
+  }
+  .section > div:nth-child(3) {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .section > div:nth-child(4) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .section > div:nth-child(5) {
+    grid-row: 1/4;
+    grid-column: 5/5;
+  }
+
+  .section > div:nth-child(6) {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+  .section > div:nth-child(7) {
+    grid-row: 2/3;
+    grid-column: 3/3;
+  }
+  .section > div:nth-child(8) {
+    grid-row: 3;
+    grid-column: 1/2;
+  }
+  .section > div:nth-child(9) {
+    grid-row: 3/4;
+    grid-column: 2/4;
+  }
+}
+
+@media (max-width: 1120px) {
+  .search_form {
+    margin-top: 220px;
+    margin-bottom: 120px;
+  }
+  .section {
+    height: 400px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 100px);
+  }
+  .section > div:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-color: aliceblue;
+  }
+  .section > div:nth-child(2) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-color: red;
+  }
+  .section > div:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-color: blue;
+  }
+  .section > div:nth-child(4) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: purple;
+  }
+  .section > div:nth-child(5) {
+    grid-column: 5/5;
+    grid-row: 1/6;
+    background-color: pink;
+  }
+
+  .section > div:nth-child(6) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: aqua;
+  }
+  .section > div:nth-child(7) {
+    grid-column: 2/3;
+    background-color: bisque;
+    grid-row: 3/4;
+  }
+  .section > div:nth-child(8) {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+  .section > div:nth-child(9) {
+    grid-column: 2/3;
+    grid-row: 4;
+  }
 }
