modified:   .gitignore 	modified:   src/components/Analitics/Analitics.module.css 	modified:   src/components/Analitics/Analitics.tsx 	modified:   src/components/Analitics/AnaliticsAveragePrice.tsx 	modified:   src/components/Analitics/AnaliticsAveragePricePerMeter.tsx 	modified:   src/components/BreadCrumbs.module.css 	modified:   src/components/Item/ItemFullscreenPhotosGallery.module.css 	modified:   src/components/List/List.tsx 	modified:   src/components/Navbar/UserInterface.module.css 	modified:   src/components/SearchForm.tsx 	modified:   src/styles/Item.module.css

--- a/src/components/Analitics/Analitics.module.css
+++ b/src/components/Analitics/Analitics.module.css
@@ -37,6 +37,7 @@
 .section > h2 {
   margin: 10px 0;
   user-select: none;
+  border-bottom: 1px solid rgba(216, 216, 216, 0.4);
 }
 
 .section:last-child {
@@ -92,5 +93,4 @@
 }
 
 @media screen and (min-width: 768px) {
-  
 }
