--- a/src/components/Navbar/UserInterface.module.css
+++ b/src/components/Navbar/UserInterface.module.css
@@ -100,10 +100,11 @@
   user-select: none;
   justify-content: center;
 }
-
 .menu_list > a > .menu_list_item {
   color: white;
   text-decoration: none;
+}
+.menu_list > a:not(:last-child) > .menu_list_item {
   border-bottom: 1px solid rgba(216, 216, 216, 0.4);
 }
 
