--- a/src/styles/Item.module.css
+++ b/src/styles/Item.module.css
@@ -13,10 +13,11 @@
 .section_item {
   width: auto;
   height: auto;
-  background-color: #fff;
+  background-color: var(--background-color);
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   margin: 1rem 20px;
+
 }
 .section_item_div {
   padding: 0 2rem 0.5rem 2rem;
