modified:   src/assets/profile.jpg 	modified:   src/components/Analitics/Analitics.module.css 	modified:   src/components/BreadCrumbs.module.css 	modified:   src/components/Buttons/ButtonExit.tsx 	modified:   src/components/CreateForm/CreateFormInput.module.css 	modified:   src/components/FullscreenModal.tsx 	modified:   src/components/Item/ItemInfoDescription.module.css 	modified:   src/components/Item/ItemPhotos.module.css 	modified:   src/components/Item/ItemRealtorData.module.css 	modified:   src/components/Item/ItemRealtorData.tsx 	modified:   src/components/Item/ItemSideArticle.module.css 	modified:   src/components/Item/ItemSideArticle.tsx 	modified:   src/components/Item/ItemSideArticleCredit.tsx 	modified:   src/components/Item/Table.tsx 	modified:   src/components/List/List.module.css 	modified:   src/components/List/ListItem.module.css 	modified:   src/components/Navbar/SidebarMobile.tsx 	modified:   src/components/Navbar/UserInterface.module.css 	modified:   src/components/Navbar/UserSignUp.module.css 	modified:   src/components/SearchForm.module.css 	modified:   src/components/SignUp.module.css 	modified:   src/context/DarkThemeContext.tsx 	modified:   src/pages/Item.tsx 	modified:   src/styles/Item.module.css 	modified:   src/styles/LandingPage.module.css

--- a/src/components/Analitics/Analitics.module.css
+++ b/src/components/Analitics/Analitics.module.css
@@ -90,7 +90,7 @@
   display: grid;
   grid-template-columns: 800px 200px;
   grid-template-rows: 50% 50%;
-  background-color: var(--text-background);
+  background-color: var(--article);
   align-items: center;
 }
 
