--- a/src/components/CreateForm/CreateFormInput.module.css
+++ b/src/components/CreateForm/CreateFormInput.module.css
@@ -14,6 +14,7 @@
   transition: all 0.3s ease 0s;
   outline: none;
   text-align: center;
+  background-color: var(--article);
 }
 .form_input:focus {
   outline: solid var(--tertiary-text-color);
