--- a/src/components/Item/ItemSideArticle.module.css
+++ b/src/components/Item/ItemSideArticle.module.css
@@ -45,6 +45,7 @@ form {
   border-radius: 5px;
   transition: all 0.3s ease 0s;
   outline: none;
+  background-color: var(--article);
 }
 .inputText:focus {
   outline: solid var(--tertiary-text-color);
@@ -56,6 +57,7 @@ form {
   border-radius: 5px;
   height: 196px;
   resize: none;
+  background-color: var(--article);
 }
 
 textarea:focus {
