--- a/src/components/BreadCrumbs.module.css
+++ b/src/components/BreadCrumbs.module.css
@@ -19,19 +19,15 @@
   font-size: 24px;
 }
 
-.breadcrumbs_nav > li:hover {
+.breadcrumbs_nav li:hover {
   text-decoration: underline var(--tertiary-text-color);
 }
 
-.breadcrumbs_nav > li:after {
-  content: "/";
+.breadcrumbs_nav li:after {
+  content: " / ";
   margin: 0 10px;
   position: relative;
   vertical-align: middle;
-}
-
-.breadcrumbs_nav > li:last-child:after {
-  content: "";
 }
 
 .breadcrumbs_nav > a:visited {
