--- a/src/components/Item/ItemInfoDescription.module.css
+++ b/src/components/Item/ItemInfoDescription.module.css
@@ -14,13 +14,14 @@
 }
 
 .description_wrapper {
-  background-color: var(--text-background);
+  background-color: var(--article);
   border-radius: 5px;
   margin: 20px 0;
+  padding: 0 20px;
 }
 
 .description_wrapper > h3 {
-  padding: 20px 0;
+  padding: 20px;
 }
 
 .description_published {
@@ -29,7 +30,7 @@
 }
 
 .description_container_maps {
-  background-color: var(--text-background);
+  background-color: var(--article);
   border-radius: 5px;
   padding: 20px;
   margin: 20px 0;
@@ -71,7 +72,7 @@
 
   .description_container_maps {
     height: calc(100% - 100px);
-    
+
     padding: 0;
     margin-top: 100px;
   }
