--- a/src/components/Item/ItemPhotos.module.css
+++ b/src/components/Item/ItemPhotos.module.css
@@ -1,6 +1,6 @@
 .container_photos_bigPhoto {
   height: 518px;
-  background-color: var(--text-background);
+  background-color: var(--article);
   border-radius: 5px;
   position: relative;
   cursor: -webkit-zoom-in;
@@ -87,7 +87,7 @@
   width: 100%;
   margin: 1rem 0;
   position: relative;
-  background-color: var(--text-background);
+  background-color: var(--article);
   border-radius: 5px;
 }
 
