--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -14,7 +14,7 @@
 }
 
 .list__container {
-  background-color: var(--text-background);
+  background-color: var(--background-color);
   display: flex;
   flex-direction: column;
   align-items: center;
