--- a/src/components/List/ListItem.module.css
+++ b/src/components/List/ListItem.module.css
@@ -14,7 +14,7 @@ a {
   display: grid;
   grid-template-columns: 300px auto;
   column-gap: 1rem;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--article);
   padding: 20px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
