--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -102,6 +102,7 @@
   outline: none;
   text-align: center;
   border: none;
+  background-color: var(--article);
 }
 .form_input:focus {
   outline: solid var(--tertiary-text-color);
@@ -125,6 +126,7 @@
   border-radius: 5px;
   transition: all 0.3s ease 0s;
   outline: none;
+  background-color: var(--article);
 }
 .inputCity:focus {
   outline: solid var(--tertiary-text-color);
