--- a/src/components/SignUp.module.css
+++ b/src/components/SignUp.module.css
@@ -109,6 +109,7 @@
   border-radius: 5px;
   transition: all 0.3s ease 0s;
   outline: none;
+  background-color: var(--article);
 }
 .inputText:focus {
   outline: solid var(--tertiary-text-color);
