--- a/src/styles/Item.module.css
+++ b/src/styles/Item.module.css
@@ -17,7 +17,6 @@
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   margin: 1rem 20px;
-
 }
 .section_item_div {
   padding: 0 2rem 0.5rem 2rem;
@@ -66,7 +65,7 @@
 }
 
 .multimedia_categories {
-  background-color: #554971;
+  background-color: var(--secondary-color);
   border-radius: 10px 10px 0 0;
   height: 50px;
   width: 150px;
@@ -83,12 +82,12 @@
 }
 
 .multimedia_categories_active {
-  background-color: #36213e;
+  background-color: var(--tertiary-color);
   color: #daa520;
 }
 
 .multimedia_categories > span {
-  background-color: #554971;
+  background-color: var(--secondary-color);
   position: absolute;
   left: 0;
   width: 100%;
@@ -98,7 +97,7 @@
   transition: all 0.3s ease 0s;
 }
 .multimedia_categories_active > span {
-  background-color: #36213e;
+  background-color: var(--tertiary-color);
 }
 
 .container_article_multimedia_categories > ul > div {
@@ -109,11 +108,15 @@
 .container_article_multimedia_categories > ul > div > span {
   margin-right: 1rem;
 }
-
+.ask_for_price:hover>p {
+  color: var(--tertiary-text-color);
+  transition: all 0.5s ease 0s;
+  cursor: pointer;
+}
 .section_information {
   width: auto;
   height: auto;
-  background-color: #fff;
+  background-color: var(--background-color);
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   margin: 1rem 20px;
