new file:   src/components/CityDropdown.module.css 	new file:   src/components/CityDropdown.tsx 	modified:   src/components/Navbar/Navbar.tsx 	modified:   src/pages/LandingPage.tsx 	modified:   src/styles/LandingPage.module.css

--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -215,3 +215,17 @@
     transform: translate(-50%, -50%);
   }
 }
+
+.suggestions {
+  width: 100%;
+  display: block;
+  background-color: red;
+  position: absolute;
+  text-align: center;
+}
+.suggestions li{
+  list-style: none;
+  margin: 10px 0;
+  cursor: pointer;
+  user-select: none;
+}
