--- a/src/components/CityDropdown.module.css
+++ b/src/components/CityDropdown.module.css
@@ -63,3 +63,20 @@
 .suggestions_relative {
   position: relative;
 }
+
+.suggestions::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+}
+
+.suggestions::-webkit-scrollbar-thumb {
+  height: 5px;
+  border-radius: 16px;
+  background-color: var(--secondary-color);
+}
+
+.suggestions::-webkit-scrollbar-track {
+  border-radius: 16px;
+  background-color: rgba(0, 0, 0, 0);
+}
