modified:   src/components/Analitics/AnaliticsAveragePricePerMeter.tsx 	modified:   src/components/CityDropdown.module.css 	modified:   src/components/CityDropdown.tsx 	modified:   src/components/List/List.module.css 	modified:   src/components/List/List.tsx 	modified:   src/components/Navbar/Navbar.tsx 	modified:   src/components/Navbar/UserInterface.tsx 	modified:   src/components/Navbar/UserSignIn.tsx 	modified:   src/components/Navbar/UserSignUp.module.css 	modified:   src/components/Navbar/UserSignUp.tsx 	renamed:    src/components/SearchForm.module.css -> src/components/SearchForm/SearchForm.module.css 	renamed:    src/components/SearchForm.tsx -> src/components/SearchForm/SearchForm.tsx 	renamed:    src/components/SearchFormData.tsx -> src/components/SearchForm/SearchFormData.tsx 	modified:   src/context/AuthContext.tsx 	modified:   src/context/DarkThemeContext.tsx 	modified:   src/pages/LandingPage.tsx

--- a/src/components/CityDropdown.module.css
+++ b/src/components/CityDropdown.module.css
@@ -46,6 +46,7 @@
   text-align: center;
   box-shadow: var(--box-shadow-dropdown);
   border-radius: 0 0 5px 5px;
+  z-index: 10;
 }
 .suggestions li {
   color: var(--secondary-text-color);
