--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -103,3 +103,24 @@
   transition: transform 0.5s ease-in-out;
   transform: rotate(180deg);
 }
+
+.SearchFormMobile_closed {
+  background-color: var(--article);
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 60px;
+  justify-content: center;
+}
+.SearchFormMobile_opened {
+  padding: 20px 0 10px 0;
+  background-color: var(--article);
+  display: flex;
+  flex-direction: column;
+}
+.button_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
