--- a/src/components/Navbar/UserSignUp.module.css
+++ b/src/components/Navbar/UserSignUp.module.css
@@ -188,6 +188,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 20%);
 }
 
 .signUpBusiness_container > h3 {
@@ -223,10 +224,12 @@
   color: #4bb543;
   height: 200px;
   width: 200px;
+
 }
 
 .errorModal {
   color: #ff3333;
   height: 200px;
   width: 200px;
+
 }
