--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -264,37 +264,30 @@
   .section > div:nth-child(1) {
     grid-column: 1/2;
     grid-row: 1/2;
-    background-color: aliceblue;
   }
   .section > div:nth-child(2) {
     grid-column: 2/3;
     grid-row: 1/2;
-    background-color: red;
   }
   .section > div:nth-child(3) {
     grid-column: 1/2;
     grid-row: 2/3;
-    background-color: blue;
   }
   .section > div:nth-child(4) {
     grid-column: 2/3;
     grid-row: 2/3;
-    background-color: purple;
   }
   .section > div:nth-child(5) {
     grid-column: 5/5;
     grid-row: 1/6;
-    background-color: pink;
   }
 
   .section > div:nth-child(6) {
     grid-column: 1/2;
     grid-row: 3/4;
-    background-color: aqua;
   }
   .section > div:nth-child(7) {
     grid-column: 2/3;
-    background-color: bisque;
     grid-row: 3/4;
   }
   .section > div:nth-child(8) {
@@ -304,5 +297,20 @@
   .section > div:nth-child(9) {
     grid-column: 2/3;
     grid-row: 4;
+  }
+}
+@media (max-width: 500px) {
+  .search_form {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 100%;
+  }
+  .section {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 10px 0;
   }
 }
