--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -111,8 +111,10 @@
   flex-direction: column;
   height: 60px;
   justify-content: center;
+  transition: all 0.6s ease-in-out 0s;
 }
 .SearchFormMobile_opened {
+  transition: all 0.6s ease-in-out 0s;
   padding: 20px 0 10px 0;
   background-color: var(--article);
   display: flex;
