--- a/src/components/List/Pagination.module.css
+++ b/src/components/List/Pagination.module.css
@@ -3,7 +3,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background: linear-gradient(var(--text-background), var(--primary-color));
+  background: linear-gradient(
+    var(--background-color) 50%,
+    var(--primary-color) 100%
+  );
 }
 
 .pagination__list > li {
