modified:   src/components/CreateForm/CreateForm.module.css 	modified:   src/components/List/ListItemMobile.module.css 	modified:   src/components/List/ListItemMobile.tsx 	modified:   src/components/Navbar/UserSignUp.tsx 	modified:   src/context/DarkThemeContext.tsx 	modified:   src/styles/LandingPage.module.css

--- a/src/components/List/ListItemMobile.module.css
+++ b/src/components/List/ListItemMobile.module.css
@@ -22,6 +22,12 @@
   background-color: bisque;
   border-radius: 16px 16px 0 0;
 }
+.grid_img img {
+  border-radius: 16px 16px 0 0;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
 
 .grid_description {
   width: 300px;
