--- a/src/components/CreateForm/CreateForm.module.css
+++ b/src/components/CreateForm/CreateForm.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   margin-top: 100px;
   height: 100%;
-  background-color: antiquewhite;
+  background-color: var(--landing-page-form);
   display: flex;
   justify-content: center;
   flex-direction: column;
